feat: Add Apache Maven Wrapper and core configuration for Gemini Live Bridge
- Introduced `mvnw.cmd` for Windows support in Maven Wrapper.
- Created `BridgeConfig` interface for strong-typed configuration mapping.
- Implemented `CallSession` domain entity to manage call lifecycle and state transitions.
- Added `SessionStatus` enum to represent call session states.
- Developed `DotEnv` utility for dynamic loading of environment variables from `.env` files.
- Configured application properties for Quarkus runtime settings.
- Added unit tests for configuration mapping and session management.